# nn-from-scratch

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp
.devcontainer/: devcontainer.json
src/: layer.cpp  layer.h  neuron.cpp  neuron.h
